--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".List"
+            android:name=".ListUser"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
