--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'com.google.gms:google-services:4.3.13'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation platform('com.google.firebase:firebase-bom:31.0.3')
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
